Fix: UI: Post Publish Panel overlaps the user profile dropdown… (#17075)

--- a/packages/edit-post/src/components/layout/style.scss
+++ b/packages/edit-post/src/components/layout/style.scss
@@ -155,6 +155,7 @@
 	overflow: auto;
 
 	@include break-medium() {
+		z-index: z-index(".edit-post-layout .edit-post-post-publish-panel-break-medium");
 		top: $admin-bar-height;
 		left: auto;
 		width: $sidebar-width;
